# json_flattener_rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml  toolchain.sh
python/: __init__.py  benchmark.py  data_generator.py  json_flattener.py  json_to_parquet.py
src/: lib.rs  python.rs
tests/: test_flattener.rs
