[package]
name = "json-flattener"
version = "0.1.0"
edition = "2021"
authors = ["Paul Nikholas Lopez <nik.lopez381@gmail.com>"]
description = "A high-performance JSON flattener library"
license = "MIT"
repository = "https://github.com/tembolo1284/json_flattener_rust"

[lib]
name = "json_flattener"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[test]]
name = "test_flattener"
path = "tests/test_flattener.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
num_cpus = "1.16"
dashmap = "5.5"

[dependencies.pyo3]
version = "0.20"
features = ["extension-module", "abi3-py38"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
strip = true
panic = "abort"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"
tempfile = "3.8"

# commenting out for now
# [[bench]]
# name = "flattener_benchmark"
# harness = false
